added JSON return with weather informations & city name

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,6 +4,6 @@ index:
     methods: GET
 
 choose_trip:
-    path: /chooseNextTrip/{town1}&{town2}
+    path: /chooseNextTrip
     controller: App\Controller\WeatherController::compareWeather
     methods: GET|POST
