--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.3",
         "vue-template-compiler": "^2.6.12",
+        "watch": "^1.0.2",
         "webpack-cli": "^3.3.12"
     }
 }
